启用新对话框主题；界面微调；移除部分调试代码

--- a/SharpPDFDecrypter/SharpPDFDecrypter.csproj
+++ b/SharpPDFDecrypter/SharpPDFDecrypter.csproj
@@ -10,6 +10,8 @@
     <RepositoryUrl>https://github.com/Myitian/SharpPDFDecrypter</RepositoryUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Version>1.1.0</Version>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
