嵌入部分图标；增加 .NET Framework 版本检测和当前目录权限检测；清理代码

--- a/SharpPDFDecrypter/SharpPDFDecrypter.csproj
+++ b/SharpPDFDecrypter/SharpPDFDecrypter.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netframework4.7.2</TargetFramework>
+    <TargetFramework>netframework4.7</TargetFramework>
     <UseWPF>true</UseWPF>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Authors>Myitian</Authors>
@@ -11,7 +11,7 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -23,6 +23,11 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Start.ico" />
+    <Resource Include="Resources\Stop.ico" />
   </ItemGroup>
 
   <ItemGroup>
